Fix: admin UI warning is unreadable in dark mode

--- a/src/meshweb/static/admin/admin_ext.css
+++ b/src/meshweb/static/admin/admin_ext.css
@@ -12,6 +12,7 @@
     /*margin-bottom: 5px;*/
     border-radius: 4px;
     border: black 2px solid;
+    color: black;
 }
 
 /* This is an override of the styles at admin/css/login.css in the admin site */
